--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "system-cleaner-optimizer",
-  "version": "0.0.3",
+  "name": "saspclean",
+  "version": "0.0.4",
   "description": "This script was created to restore the computer to the fast, pure and regular performance as it was when it was first purchased.",
   "main": "index.js",
   "scripts": {
@@ -8,5 +8,11 @@
   },
   "keywords": [],
   "author": "Sasprosko/Umut",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "axios": "^1.5.1",
+    "node-fetch": "^3.3.2",
+    "user-agents": "^1.1.3"
+  },
+  "devDependencies": {}
 }
