--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "saspclean",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "description": "This script was created to restore the computer to the fast, pure and regular performance as it was when it was first purchased.",
   "main": "index.js",
   "scripts": {
@@ -10,6 +10,7 @@
   "author": "Sasprosko/Umut",
   "license": "MIT",
   "dependencies": {
+    "intl": "^1.2.5",
     "node-fetch": "^3.3.2",
     "user-agents": "^1.1.3"
   },
